rectified priv key path in hosts file

--- a/hosts.ini
+++ b/hosts.ini
@@ -7,5 +7,5 @@ swarmvm4
 ansible_python_interpreter=/usr/bin/python3
 ansible_connection=ssh
 ansible_user=azureuser
-ansible_ssh_private_key_file="/home/azureuser/filemount-poc/swarmvm"
+ansible_ssh_private_key_file="/home/azureuser/swarmvm"
 
